docker/src/ui/draw_blocks/snapshots/gnostr_mcp_agent__ui__draw_blocks__chart_bandwidth__tests__draw_blocks_charts_running_with_data.snap
---
source: src/ui/draw_blocks/chart_bandwidth.rs
expression: setup.terminal.backend()
---
"╭─── rx: 0.00 kb/s tx: 205.00 kb/s ────╮"
"│           │        •                 │"
"│           │      ••                  │"
"│           │     ••                   │"
"│205.00 kb/s│    ••                    │"
"│           │   •                      │"
"│0.00 kb/s  │ ••                       │"
"│           │••                        │"
"│           │                          │"
"╰──────────────────────────────────────╯"
