docker/src/ui/draw_blocks/snapshots/gnostr_mcp_agent__ui__draw_blocks__chart_bandwidth__tests__draw_blocks_charts_running_with_data_tx_and_rx.snap
---
source: src/ui/draw_blocks/chart_bandwidth.rs
expression: setup.terminal.backend()
---
"╭─── rx: 566.00 kb/s tx: 56.60 kb/s ───╮"
"│           │        •                 │"
"│           │      ••                  │"
"│           │     ••                   │"
"│566.00 kb/s│    ••                    │"
"│           │   •                      │"
"│56.60 kb/s │  ••                      │"
"│           │••    •••                 │"
"│           │••••••                    │"
"╰──────────────────────────────────────╯"
